--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -2,11 +2,85 @@ header {
 	justify-content: center;
 	display: flex;
 	background: white;
-	max-height: 80px;
+	.lateral-menu {
+		width: 100%;
+		display: flex;
+		gap: 15px;
+		justify-content: flex-end;
+		align-items: center;
+	}
 	box-shadow: 0 2px 6px #00000840;
-	position: fixed;
+	position: absolute;
 	width: 100%;
 	top: 0;
 	left: 0;
 	z-index: 999;
+	.header-container {
+		width: 100%;
+		display: flex;
+		justify-content: space-between;
+
+		padding: 5px 15px;
+		align-items: center;
+		gap: 10px;
+		flex-direction: column;
+		.search {
+			display: flex;
+			align-items: center;
+			min-width: 70%;
+			justify-content: center;
+			align-items: center;
+			h1 {
+				margin: 0;
+			}
+
+			.form-group {
+				height: 40px;
+				overflow: hidden;
+				border: 1px solid black;
+				border-radius: 50px;
+				width: 100%;
+				display: flex;
+				justify-content: center;
+				select {
+					border: none;
+					min-width: 90px;
+					text-align: center;
+					&:focus {
+						outline: none;
+					}
+				}
+				button {
+					background: transparent;
+					appearance: none;
+					border: none;
+					height: 40px;
+					width: 46px;
+					font-size: 20px;
+				}
+			}
+			input.form-control {
+				border: none;
+				width: 100%;
+				padding: 0 10px;
+				&:focus {
+					outline: none;
+				}
+			}
+		}
+	}
+	@media (min-width: 768px) {
+		max-height: 80px;
+		.lateral-menu {
+			width: 80%;
+		}
+		.header-container {
+			flex-direction: row;
+			.search {
+				display: flex;
+				align-items: center;
+				min-width: 60%;
+			}
+		}
+	}
 }
