--- a/src/index.scss
+++ b/src/index.scss
@@ -8,7 +8,7 @@ body {
 }
 main {
 	min-height: 83.4vh;
-	margin-top: 90px;
+	padding: 90px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -32,6 +32,12 @@ body {
 		display: none;
 	}
 }
+.container {
+	width: 100%;
+	max-width: 1500px;
+	margin: 0 auto;
+	padding: 0 15px;
+}
 h1,
 h2,
 h3,
@@ -54,4 +60,14 @@ h4 {
 }
 h5 {
 	font-size: 1rem;
+}
+.show-desktop {
+	@media (max-width: 767px) {
+		display: none !important;
+	}
+}
+.show-mobile {
+	@media (min-width: 768px) {
+		display: none !important;
+	}
 }
