--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -13,5 +13,14 @@ footer {
 		margin: 0;
 		color: white;
 		font-weight: 700;
+		a {
+			text-decoration: none;
+			color: white;
+			font-weight: 700;
+			transition: 0.5s;
+			&:hover {
+				color: #db413c;
+			}
+		}
 	}
 }
