--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -8,6 +8,12 @@ header {
 		gap: 15px;
 		justify-content: flex-end;
 		align-items: center;
+		.search {
+			a {
+				color: black;
+				text-decoration: none;
+			}
+		}
 	}
 	box-shadow: 0 2px 6px #00000840;
 	position: absolute;
@@ -80,6 +86,17 @@ header {
 				display: flex;
 				align-items: center;
 				min-width: 60%;
+			}
+		}
+	}
+}
+.dark {
+	header {
+		.lateral-menu {
+			.search {
+				a {
+					color: white;
+				}
 			}
 		}
 	}
