--- a/src/components/lateralMenu/lateralMenu.scss
+++ b/src/components/lateralMenu/lateralMenu.scss
@@ -1,4 +1,35 @@
 .sidebar-menu {
+}
+.sidebar-menu {
+	.sidebar-title {
+		text-align: center;
+	}
+	.dark-mode-content {
+		position: relative;
+	}
+	&.menu-open {
+		right: 0;
+	}
+	&.dark {
+		background-color: #333;
+		color: white;
+		.sidebar-container {
+			nav.sidebar-nav {
+				ul {
+					li {
+						a {
+							text-decoration: none;
+							color: white;
+							&:hover {
+								color: #333;
+								background: white;
+							}
+						}
+					}
+				}
+			}
+		}
+	}
 	position: fixed;
 	top: 0;
 	width: 315px;
@@ -7,4 +38,68 @@
 	background: white;
 	z-index: 9999;
 	box-shadow: 2px 0 6px 2px black;
+	padding: 7px;
+	transition: 0.5s;
+	padding-top: 60px;
+
+	.sidebar-container {
+		position: fixed;
+		max-height: 90vh;
+		height: 100%;
+		width: 310px;
+		nav.sidebar-nav {
+			ul {
+				margin: 0;
+				padding: 0;
+				list-style: none;
+				li {
+					list-style-type: none;
+					a {
+						text-decoration: none;
+						color: #333;
+						font-size: 18px;
+						text-align: center;
+						width: 100%;
+						display: block;
+						padding: 15px;
+						transition: 0.5s;
+						&:hover {
+							background: #333;
+							color: white;
+						}
+					}
+				}
+			}
+		}
+	}
+	.sidemenu {
+		position: sticky;
+		width: 100%;
+		max-width: 310px;
+		top: 10px;
+		display: flex;
+		justify-content: space-between;
+		align-items: stretch;
+		flex-direction: column;
+		height: 100%;
+		@media (min-width: 768px) {
+			justify-content: flex-start;
+		}
+	}
+	.mobilepanel {
+		position: relative;
+		display: grid;
+		justify-content: center;
+		min-width: 100%;
+		grid-template-columns: 50% 40%;
+		align-items: center;
+		gap: 8%;
+		margin-top: 15px;
+		h4.menu-title {
+			margin: 0;
+			font-size: 1.2rem;
+			line-height: 1;
+			/* margin-top: 18px; */
+		}
+	}
 }
