--- a/src/index.scss
+++ b/src/index.scss
@@ -6,13 +6,17 @@ html,
 body {
 	overflow-x: hidden;
 }
-main {
-	min-height: 83.4vh;
-	padding: 90px;
+.iso-body main {
+	min-height: 94vh;
+	padding-top: 90px;
+	padding-bottom: 90px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-wrap: wrap;
+	@media (max-width: 767px) {
+		padding: 150px 10px 10px;
+	}
 }
 html,
 body {
@@ -47,19 +51,22 @@ p {
 	margin: 0 0 1.2em;
 }
 h1 {
-	font-size: 3rem;
-}
-h2 {
-	font-size: 2.5rem;
-}
-h3 {
 	font-size: 2rem;
 }
-h4 {
+h2 {
+	font-size: 1.7rem;
+}
+h3 {
 	font-size: 1.5rem;
+}
+h4 {
+	font-size: 1.3rem;
 }
 h5 {
 	font-size: 1rem;
+}
+.container.detail-content {
+	position: relative;
 }
 .show-desktop {
 	@media (max-width: 767px) {
@@ -70,4 +77,37 @@ h5 {
 	@media (min-width: 768px) {
 		display: none !important;
 	}
+}
+@keyframes fade-in {
+	from {
+		opacity: 0;
+	}
+}
+
+@keyframes fade-out {
+	to {
+		opacity: 0;
+	}
+}
+
+@keyframes slide-from-right {
+	from {
+		transform: translateX(100%);
+	}
+}
+
+@keyframes slide-to-left {
+	to {
+		transform: translateX(-100%);
+	}
+}
+
+::view-transition-old(root) {
+	animation: 90ms cubic-bezier(0.4, 0, 1, 1) both fade-out,
+		300ms cubic-bezier(0.4, 0, 0.2, 1) both slide-to-left;
+}
+
+::view-transition-new(root) {
+	animation: 210ms cubic-bezier(0, 0, 0.2, 1) 90ms both fade-in,
+		300ms cubic-bezier(0.4, 0, 0.2, 1) both slide-from-right;
 }
